<resources>
    <string name="app_name">workoutapp</string>
    <string name="login">Giriş Yap</string>
    <string name="register">Kayıt Ol</string>
    <string name="mail">E-mail</string>
    <string name="name">Adınız</string>
    <string name="password">Şifre</string>
    <string name="forgot_password">Şifremi Unuttum</string>
    <string name="agreement">Üye olurken Kullanım Şartlarını ve Sözleşmesi’ni kabul ediyorum.</string>
    <string name="agreement_part_first">Kullanım</string>
    <string name="agreement_part_second"> Şartlarını </string>
    <string name="agreement_part_third"> ve </string>
    <string name="agreement_part_fourth">Sözleşmesi’ni </string>
</resources>