<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:fitsSystemWindows="true"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:background="@drawable/ic_app_bg">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.15" />

    <com.lofty.workoutapp.ui.component.LoftyTextView
        android:id="@+id/textViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="ldksnfnslanfkdsnalnsdl"
        android:textColor="@android:color/white"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:textAllCaps="true"
        android:fontFamily="@font/montserrat_bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guideline"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilName"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="16dp"
        android:hint="@string/name"
        android:textColorHint="@color/textColor"
        app:boxStrokeColor="@color/colorPrettyPurple"
        app:boxStrokeWidth="2dp"
        android:visibility="gone"
        tools:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTitle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_regular"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:textColor="@color/colorPrettyPurple" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilEmail"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/mail"
        android:layout_marginTop="16dp"
        android:textColorHint="@color/textColor"
        app:boxStrokeColor="@color/colorPrettyPurple"
        app:boxStrokeWidth="2dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilName">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_regular"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:textColor="@color/colorPrettyPurple" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilPassword"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tilEmail"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/password"
        android:textColorHint="@color/textColor"
        app:boxStrokeColor="@color/colorPrettyPurple"
        app:boxStrokeWidth="2dp"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/colorPrettyPurple"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilEmail">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_regular"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textColor="@color/colorPrettyPurple" />
    </com.google.android.material.textfield.TextInputLayout>

    <CheckBox
        android:id="@+id/agreement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tilPassword"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:textColor="@color/white"
        android:visibility="gone"
        tools:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilPassword"/>

    <com.lofty.workoutapp.ui.component.LoftyTextView
        android:id="@+id/textViewAgreement"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/agreement"
        android:layout_toEndOf="@+id/agreement"
        tools:text="@string/agreement"
        android:visibility="gone"
        tools:visibility="visible"
        android:textColor="@color/colorPrettyPurple"
        app:layout_constraintStart_toEndOf="@+id/agreement"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/agreement"
        app:layout_constraintTop_toTopOf="@+id/agreement"/>

    <com.lofty.workoutapp.ui.component.LoftyTextView
        android:id="@+id/textViewForgetPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tilPassword"
        android:layout_centerHorizontal="true"
        android:visibility="gone"
        tools:visibility="visible"
        android:layout_marginTop="30dp"
        android:text="@string/forgot_password"
        android:textColor="@color/colorLoginText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilPassword"/>

    <com.lofty.workoutapp.ui.component.LoftyTextView
        android:id="@+id/textViewAlreadyHasAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="32dp"
        tools:text="Hesabınız var mı?"
        android:textColor="@color/colorLoginText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
        android:id="@+id/imageViewDone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tilPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="75dp"
        android:src="@drawable/btn_submit"
        app:layout_constraintBottom_toBottomOf="@+id/textViewAlreadyHasAccount"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewForgetPassword"/>

</androidx.constraintlayout.widget.ConstraintLayout>